<resources>
    <string name="app_name">Manage Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="seaside">Seaside</string>
    <string name="mountains">Mountains</string>
    <string name="price_eur">Price(eur)</string>
    <string name="start_date">Start Date</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="end_date">End Date</string>
    <string name="rating">Rating</string>
    <string name="save">save</string>
</resources>
