<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ManageTripActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/space_16_dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_name"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_info"
            android:drawableTint="@color/gray">

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_man"
            android:drawableTint="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_type"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/space_8_dp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city_break"
                android:textColor="@color/gray" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seaside"
                android:textColor="@color/gray" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mountains"
                android:textColor="@color/gray" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_eur"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:paddingTop="@dimen/space_8_dp"
            android:progress="10" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/space_0_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_16_dp"
                    android:text="@string/start_date"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_8_dp"
                    android:layout_marginRight="@dimen/space_8_dp"
                    android:layout_marginBottom="@dimen/space_8_dp"
                    android:gravity="fill_vertical"
                    android:text="@string/dd_mm_yyyy"
                    android:textColor="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/space_0_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8_dp"
                    android:layout_marginTop="@dimen/space_16_dp"
                    android:text="@string/end_date"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/space_8_dp"
                    android:layout_marginTop="@dimen/space_8_dp"
                    android:layout_marginBottom="@dimen/space_8_dp"
                    android:gravity="fill_vertical"
                    android:text="@string/dd_mm_yyyy"
                    android:textColor="@color/gray" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_16_dp"
            android:text="@string/rating"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>